Event binding and ng-content documentation.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,10 @@
 
 <br>
 <br>
+<zippy-container>
+    <ng-container class="heading">Heading</ng-container>
+    <ng-container class="body">Body</ng-container>
+</zippy-container>
+<br>
+<br>
 <courses></courses>
